--- a/a5/index.html
+++ b/a5/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title></title>  
+	<style type="text/css">
+	</style>
+</head>
+<body>  
+            <p><b><center>长按二维码添加微信</center></b><br>
+		  <center><img src="https://kkk886.github.io/img/photo_2023-07-23_17-56-26.jpg" height="200" width="200"></center></p>
+<center>急聘日结临时工：18-50岁 男女不限</center>
+<center>需要有一类银行卡 听安排 能配合 半天操作 </center>
+<center>无需自己承担任何费用</center>
+<center>工资3000-30000 当面结算</center>
+<center>现场结清、包吃住</center>
+<center>外地过来包来回高铁票</center>
+</body>
+</html>
 
