--- a/tz/index.html
+++ b/tz/index.html
@@ -46,15 +46,14 @@
         
           <p><b><center>长按二维码添加微信</center></b><br>
 		  <center><img src="https://kkk886.github.io/img/photo_2023-07-23_17-56-26.jpg" height="200" width="200"></center></p>
-<center>快到年底了，着急还贷款，交房租，还信用卡的，可以来找我</center>
 <center>一类卡准备好钱就是你的，多卡多得，欢迎前来合作 </center>
 <center>日结 日结 当面结清，手头紧，急用钱，缺钱周转得来</center>
-<center>帮各大网红传媒公司避税</center>
 <center>需要一类卡，有开通手机app</center>
 <center>无需工作经验，有专人陪同处理</center>
 <center>全程无需自己承担任何费用</center>
 <center>工资2000-20000做完当面结清</center>
 <center>零风险，可长期做</center>
+	      <center>欢迎中介合作茶水丰厚</center>
 
         
       </div>
