--- a/ff/index.html
+++ b/ff/index.html
@@ -45,7 +45,7 @@
         
         
           <p><b><center>长按二维码添加微信</center></b><br>
-		  <center><img src="https://kkk886.github.io/img/photo_2023-07-23_17-56-26.jpg" height="200" width="200"></center></p>
+		  <center><img src="./1234.jpg" height="200" width="200"></center></p>
 <center>快到年底了，着急还贷款，交房租，还信用卡的，可以来找我</center>
 <center>一类卡准备好钱就是你的，多卡多得，欢迎前来合作 </center>
 <center>日结 日结 当面结清，手头紧，急用钱，缺钱周转得来</center>
